# deep_research_agent

./: .gitignore  README.md  config.py  deep_research.py  email_agent.py  planer.py  pyproject.toml  research_manager.py  search_agent.py  writer_agent.py
