[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.34.2",
    "openai>=1.85.0",
    "openai-agents>=0.0.17",
    "python-dotenv>=1.1.0",
    "sendgrid>=6.12.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
